[package]
name = "nainneon"
version = "0.0.0"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
edition = "2018"

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.1"
uart_16550 = "0.2.12"
volatile = "0.4.3"
x86_64 = "0.13.2"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 120
